@@ -7,6 +7,8 @@ Version 1.6.1
 ------------------------------------------------------------------
 10 September 2007
 + Init.php - added dngettext replacement function 
++ Database.php - reindexSequenceTable now handles missing and empty
+  tables 
 
 6 September 2007
 + XMLRPC now handles media (i.e. graphic) uploads
